fixed images not showing

--- a/guessTheNumber/style.css
+++ b/guessTheNumber/style.css
@@ -44,7 +44,7 @@ body{
   position: absolute;
   top: 0;
   left: 0;
-  background-image: url(/images/scale.png);
+  background-image: url("./images/scale.png");
 }
 
 #arrow{
@@ -54,7 +54,7 @@ body{
   top: 0;
   left: 0;
 
-  background-image: url(/images/arrow.png);
+  background-image: url("./images/arrow.png");
 
   transition: .5s;
 }
