--- a/guessTheNumber_selfAttempt/style.css
+++ b/guessTheNumber_selfAttempt/style.css
@@ -29,7 +29,7 @@ body{
   width: 300px;
   height: 33px;
 
-  background: url("/images/scale.png");
+  background: url("./images/scale.png");
 }
 
 #arrow{
@@ -39,7 +39,7 @@ body{
   width: 17px;
   height: 22px;
   
-  background: url("/images/arrow.png");
+  background: url("./images/arrow.png");
 }
 
 #guessInput{
